# pololu-tic-software

./: .dir-locals.el  .gitattributes  .gitignore  BUILDING.md  CMakeLists.txt  Doxyfile  LICENSE.txt  LICENSE_tinyxml2.txt  LICENSE_yaml.txt  README.md  default.nix  update_yaml.sh
bootloader/: CMakeLists.txt  bootloader.cpp  bootloader.h  bootloader_data.cpp  firmware_archive.cpp  firmware_archive.h
cli/: CMakeLists.txt  arg_reader.h  cli.cpp  cli.h  cli_info.rc.in  device_selector.h  exception_with_exit_code.h  exit_codes.h  file_utils.h  parse_args_helpers.h  print_status.cpp  string_to_int.h
drivers/: pololu.cat  tic-bootloader.inf  tic.inf
gui/: CMakeLists.txt  gui_info.rc.in  main.cpp  main_controller.cpp  main_controller.h
gui/qt/: BallScrollBar.cpp  BallScrollBar.h  InputWizard.cpp  InputWizard.h  bootloader_window.cpp  bootloader_window.h  current_spin_box.cpp  current_spin_box.h  elided_label.cpp  main_window.cpp  main_window.h  time_spin_box.cpp  time_spin_box.h
include/: config.h.in  file_util.h  pavrpgm_config.h.in  pgm04a_native_usb_protocol.h  programmer.h  programmer_frequency_tables.h  string_to_int.h  tic.h  tic.hpp  tic_internal.h  tic_protocol.h  tic_usb_protocol.h
lib/: CMakeLists.txt  tic.c  tic.cpp  tic_current_limit.c  tic_device.c  tic_device_settings.c  tic_error.c  tic_get_settings.c  tic_handle.c  tic_internal.h  tic_names.c  tic_set_settings.c  tic_settings.c  tic_settings_fix.c  tic_settings_read_from_string.c  tic_settings_to_string.c  tic_string.c  tic_usb_protocol.h  tic_variables.c
lib/libyaml/: yaml.c
libyaml/: CMakeLists.txt  yaml.c
nix/: build.nix  build_installer.rb  builder.sh  license_builder.rb  linux_installer_builder.rb  macos_installer_builder.rb  ui.wxs  windows_installer_builder.rb  windows_installer_builder.sh
ruby/: tic03a_current_table.rb
spec/: commands_spec.rb  current_limit_spec.rb  integer_parsing_spec.rb  settings_spec.rb  spec_helper.rb  status_spec.rb
spec/default_settings/: 36v4.txt  tic06a.txt
spec/test_settings1/: 36v4.txt  tic06a.txt
windows-installer/: release.sh
